# AvengaTest

./: CMakeLists.txt  Interactor.cpp  Interactor.h  README.md  main.cpp
BlackBox/: BlackBox.cpp  BlackBox.h  CMakeLists.txt
ExternalDrive/: CMakeLists.txt  ExternalDrive.cpp  ExternalDrive.h
FrameLoader/: CMakeLists.txt  FrameLoader.cpp  FrameLoader.h  FrameLoaderFactory.cpp  FrameLoaderFactory.h  IFrameLoader.h
UI/: BoxRenderer.cpp  BoxRenderer.h  CMakeLists.txt  MetadataRenderer.h  Renderer.cpp  Renderer.h
common/: Metadata.h
