cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
project( AvengaTest )
find_package(OpenCV REQUIRED)
find_package(Boost REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${Boost_INCLUDE_DIRS})
add_subdirectory(FrameLoader)
add_subdirectory(UI)
add_subdirectory(BlackBox)
add_subdirectory(ExternalDrive)
add_executable( AvengaTest main.cpp Interactor.cpp Interactor.h)
target_link_libraries( AvengaTest  ${OpenCV_LIBS} ${Boost_LIBS} FrameLoader UI BlackBox ExternalDrive)